# esp32-community-projects

./: .gitignore  README.md  sdkconfig.defaults
doc/: MENUCONFIG_GUIDE.md  W5500_INITIALISATION_GUIDE.md  WAVESHARE_SETUP.md
esp32-eth-example/: CMakeLists.txt  LICENSE  README.md  w5500_init_template.c
esp32-eth-example/main/: CMakeLists.txt  Kconfig.projbuild  main.c  network.c
esp32-robot-controller/: CMakeLists.txt  HARDWARE_CONNECTIONS.md  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp32-robot-controller/doc/: hardwareArchitecture.md
esp32-robot-controller/main/: CMakeLists.txt  Kconfig.projbuild  camera_server.c  camera_server.h  main.c  motor_driver.h  network.c  sensors.c  sensors.h  tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h
esp32-robot-controller/main/archive/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  motor_driver.c  network.h  sdkconfig.defaults  sensors.c  tcp_client.c  tcp_server.c
